--- a/example/robolectric/WORKSPACE
+++ b/example/robolectric/WORKSPACE
@@ -1,7 +1,20 @@
-local_repository(
-  name = "org_pubref_rules_maven",
-  path = "/Users/pcj/github/rules_maven",
+# local_repository(
+#   name = "org_pubref_rules_maven",
+#   path = "/Users/pcj/github/rules_maven",
+# )
+
+android_sdk_repository(
+    name = "androidsdk",
+    api_level = 25,
 )
+
+load("//:workspace.bzl", "local_rules_maven_repository")
+local_rules_maven_repository(
+    name = "org_pubref_rules_maven",
+)
+
+#load("@org_pubref_rules_maven//android:sdk.bzl", "android_sdk")
+#android_sdk()
 
 load("@org_pubref_rules_maven//maven:rules.bzl", "maven_repositories", "maven_repository")
 maven_repositories()
@@ -63,3 +76,17 @@ maven_repository(
 
 load("@robolectric//:rules.bzl", "robolectric_runtime", "robolectric_default")
 robolectric_default()
+
+maven_repository(
+    name = 'junit4',
+    deps = [
+        'junit:junit:4.12',
+    ],
+    transitive_deps = [
+        '2973d150c0dc1fefe998f834810d68f278ea58ec:junit:junit:4.12',
+        '42a25dc3219429f0e5d060061f71acb49bf010a0:org.hamcrest:hamcrest-core:1.3',
+    ],
+)
+
+load("@junit4//:rules.bzl", "junit4_default")
+junit4_default()
