--- a/example/grpc_java/WORKSPACE
+++ b/example/grpc_java/WORKSPACE
@@ -1,9 +1,9 @@
 # Note: this 'local_rules_maven_repository' is to facilitate testing
 # and continuous integration.  You should load rules_maven using more
 # traditional means (as per the main README.md).
-load("//:local_rules_maven_repository.bzl", "local_rules_maven_repository")
-local_rules_maven_repository(
+local_repository(
     name = "org_pubref_rules_maven",
+    path = "../../",
 )
 
 load("@org_pubref_rules_maven//maven:rules.bzl", "maven_repositories", "maven_repository")
