--- a/example/grpc_java/src/main/java/BUILD
+++ b/example/grpc_java/src/main/java/BUILD
@@ -1,6 +1,6 @@
 java_binary(
     name = "main",
-    deps = ["@grpc_java//:runtime"],
+    deps = ["@grpc_java//:compile"],
     srcs = ["Main.java"],
     main_class = "example.Main",
 )
